--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
 }
 
 a {
-  text-decoration: none;
   color: #333333;
 }
 
@@ -62,6 +61,16 @@ a {
 #right #links {
   margin-top: 50px;
   line-height: 10px;
+}
+
+#right #projects {
+  margin-top: 50px;
+  line-height: 10px;
+}
+
+#subheader-text {
+  font-size: 2em;
+  color: #333333;
 }
 
 #footer {
