--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,15 @@ body {
   padding: 0 4rem;
 }
 
+nav ul {
+  padding: 0;
+  list-style: none;
+}
+
+nav ul li {
+  display: inline;
+}
+
 h1 {
   font-size: 3em;
   font-weight: normal;
@@ -43,6 +52,24 @@ a {
 #date {
   font-family: Monospace;
   font-size: 0.9em;
+}
+
+footer {
+  font-size: 0.5em;
+  margin-top: 4em;
+  margin-top: 4rem;
+  border-top: 1px solid #d5d5d5;
+  text-align: center;
+  color: #999999;
+}
+
+footer ul {
+  padding: 0;
+  list-style: none;
+}
+
+footer ul li {
+  display: inline;
 }
 
 #footer {
