--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@ body {
 }
 
 nav {
-  font-size: 1.5em;
+  font-size: 0.9em;
+  font-weight: bold;
   color: #999999;
 }
 
@@ -17,6 +18,10 @@ nav ul {
 
 nav ul li {
   display: inline;
+}
+
+nav ul li a {
+  color: #999999;
 }
 
 footer {
