--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,7 @@ nav ul {
 
 nav ul li {
   display: inline;
-  margin-right: 1em;
-  margin-right: 1rem;
+  margin-right: 10px;
 }
 
 nav ul li a {
