--- a/css/main.css
+++ b/css/main.css
@@ -61,11 +61,12 @@ h2 {
   margin: 2rem 0 0.5rem 0;
   color: #333333;
 }
-
+/*
 p {
   margin: 0.2em 0 0.2em 0;
   margin: 0.2rem 0 0.2rem 0;
 }
+*/
 
 a {
   text-decoration: none;
@@ -84,5 +85,4 @@ a {
 }
 
 .post {
-  margin: 0.5em auto 1em;
 }
