--- a/css/main.css
+++ b/css/main.css
@@ -82,8 +82,8 @@ a {
 }
 
 ul.posts {
-  margin: 0.1em 0 0.1em;
-  margin: 0.1rem 0 0.1rem;
+  margin: 0.5em 0 0;
+  margin: 0.5rem 0 0;
   padding: 0;
 }
 
