play around with margins some more

--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,8 @@ a {
 ul.posts {
   margin: 0.5em 0 0;
   margin: 0.5rem 0 0;
-  padding: 0;
+  padding: 0.5em 0 0;
+  padding: 0.5rem 0 0;
 }
 
 ul.posts li {
