play around with margins some more

--- a/css/main.css
+++ b/css/main.css
@@ -82,12 +82,11 @@ a {
 }
 
 ul.posts {
-  margin: 0.5em 0 0;
-  margin: 0.5rem 0 0;
-  padding: 0.5em 0 0;
-  padding: 0.5rem 0 0;
+  margin: 0;
+  padding: 0;
 }
 
 ul.posts li {
   list-style: none;
+  margin: 0 0 0.5em 0;
 }
