change layout of blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 ---
 layout: default
+title: David Edwards :: Blog
 ---
+<h3>{{ page.topic }}</h3>
 <p id="date">{{ page.date | date_to_string }}</p>
 <div class="post">
   {{ content }}
