--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,14 @@ h2 {
   color: #333333;
 }
 
+h3 {
+  font-size: 2em;
+  font-weight: normal;
+  margin: 2em 0 0.5em 0;
+  margin: 2rem 0 0.5rem 0;
+  color: #0000ff;
+}
+
 a {
   text-decoration: none;
 }
