change date styling on posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: David Edwards | Blog
 ---
 <h3>{{ page.topic }}</h3>
-<p id="date">{{ page.date | date_to_string }}</p>
-<div class="post">
+<p class="date">{{ page.date | date_to_string }}</p>
+<div>
   {{ content }}
 </div>
