--- a/css/main.css
+++ b/css/main.css
@@ -86,9 +86,6 @@ a {
   font-size: 0.9em;
 }
 
-.post {
-}
-
 ul.posts {
   margin: 0;
   padding: 0;
@@ -98,4 +95,8 @@ ul.posts li {
   list-style: none;
   margin: 0 0 0.4em 0;
   margin: 0 0 0.4rem 0;
+}
+
+p.date {
+  color: #999999;
 }
