--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,5 @@
-.highlight  { background: #f0f0f0; }
+.highlighter-rouge { background: #f0f0f0; }
+.highlight { background: #f0f0f0; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
