--- a/css/main.css
+++ b/css/main.css
@@ -75,11 +75,13 @@ a {
   color: #ff0000;
 }
 
-.photo {
+img.photo {
   border-radius: 50%;
   max-width: 100%;
   height: auto;
-  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul.posts {
