center navigation on main page

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,7 @@ layout: default
 <div>
   {{ content }}
 </div>
-<nav>
+<nav class="main">
   <ul>
     <li><a href="/about">About</a></li>
     <li><a href="/blog">Blog</a></li>
