--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<nav>
+<nav class="page">
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
