change footer styling for main page

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -15,3 +15,8 @@ layout: default
     <li><a href="mailto:david.l.edwards@gmail.com">Mail</a></li>
   </ul>
 </nav>
+<footer>
+  <ul>
+    <li>Copyright &copy; 2015 David Edwards</li>
+  </ul>
+</footer>
