--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,3 +16,8 @@ layout: default
 <div>
   {{ content }}
 </div>
+<footer class="page">
+  <ul>
+    <li>Copyright &copy; 2015 David Edwards</li>
+  </ul>
+</footer>
