--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
+<h1 class="page">{{ page.title }}</h1>
 <nav class="page">
   <ul>
     <li><a href="/">Home</a></li>
