--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,11 @@ h2 {
   color: #333333;
 }
 
+h2.not-found {
+  text-align: center;
+  color: #ff0000;
+}
+
 h3 {
   font-size: 2em;
   font-weight: normal;
