--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
   font-family: Avenir, Helvetica, sans-serif;
   margin: 0;
+  margin-left: 10%;
+  margin-right: 10%;
   padding: 0 4em;
   padding: 0 4rem;
 }
@@ -107,6 +109,11 @@ h4 {
   margin: 2em 0 0.5em 0;
   margin: 2rem 0 0.5rem 0;
   color: #0000ff;
+}
+
+h5 {
+  font-weight: normal;
+  color: #909497;
 }
 
 a {
