--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Avenir, Helvetica, sans-serif;
+  font-family: 'Open Sans', Helvetica, sans-serif;
   margin: 0;
   margin-left: 10%;
   margin-right: 10%;
