add Instagram link

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,6 +9,7 @@ layout: default
     <li><a href="/blog">Blog</a></li>
     <li><a href="https://linkedin.com/in/davidledwards">LinkedIn</a></li>
     <li><a href="https://twitter.com/davidledwards">Twitter</a></li>
+    <li><a href="https://www.instagram.com/david.l.edwards/">Instagram</a></li>
     <li><a href="https://github.com/davidledwards">GitHub</a></li>
     <li><a href="mailto:david.l.edwards@gmail.com">Mail</a></li>
   </ul>
