new blog post on role of APIs; change styling of images

--- a/css/main.css
+++ b/css/main.css
@@ -156,3 +156,9 @@ p.loud {
   font-size: 2.0em;
   color: #7EAA55;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
