reduce default font size in body

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Open Sans', Helvetica, sans-serif;
+  font-size: 0.9em;
+  font-weight: normal;
   margin: 0;
   margin-left: 10%;
   margin-right: 10%;
