--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,77 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="author" content="David Edwards"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
     <link rel="stylesheet" type="text/css" href="/css/syntax.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
-    <link rel="icon" type="image/png" href="/images/icon.png"/>
-    <meta name="author" content="David Edwards"/>
+    <link rel="icon" type="image/png" href="/images/de-icon.png"/>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="/scripts/navbar.js"></script>
   </head>
-  <body>
-    {{ content }}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <body class="has-navbar-fixed-top">
+    <nav class="navbar is-fixed-top is-light" role="navigation" aria-label="main navigation">
+        <div class="container has-text-weight-bold">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="http://davidedwards.io">
+              <img src="/images/de-icon.png">
+            </a>
+            <p class="navbar-item has-text-grey is-uppercase">
+              {{ page.title }}
+            </p>
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+          <div id="navbarMenu" class="navbar-menu">
+            <div class="navbar-end">
+              <a class="navbar-item" href="/about">
+                About
+              </a>
+              <a class="navbar-item" href="/blog">
+                Blog
+              </a>
+              <a class="navbar-item" href="https://linkedin.com/in/davidledwards">
+                LinkedIn
+              </a>
+              <a class="navbar-item" href="https://twitter.com/davidledwards">
+                Twitter
+              </a>
+              <a class="navbar-item" href="https://instagram.com/david.l.edwards">
+                Instagram
+              </a>
+              <a class="navbar-item" href="https://github.com/davidledwards">
+                GitHub
+              </a>
+              <a class="navbar-item" href="mailto:david.l.edwards@gmail.com">
+                Mail
+              </a>
+            </div>
+          </div>
+        </div>
+      </nav>
+        
+    <div class="columns is-mobile">
+      <div class="column"></div>
+      <div class="column is-four-fifths">
+        {{ content }}
+      </div>
+      <div class="column"></div>
+    </div>
 
-      ga('create', 'UA-80543800-1', 'auto');
-      ga('send', 'pageview');
-    </script> 
+    <footer class="footer has-background-light">
+      <div class="content has-text-centered is-small">
+        <p class="has-text-grey has-text-weight-bold">
+          Copyright &copy; 2019 David Edwards
+        </p>
+      </div>
+    </footer>
+    <script src="/scripts/analytics.js"></script>
   </body>
 </html>
