--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,11 @@
 ---
-layout: page
+layout: default
+title: Blog
 ---
-<h3>{{ page.topic }}</h3>
-<p class="date">{{ page.date | date_to_string }}</p>
-<div>
-  {{ content }}
-</div>
+<section class="section">
+  <h2 class="title is-4">{{ page.topic }}</h1>
+  <h3 class="subtitle is-6 has-text-grey">{{ page.date | date_to_string }}</h3>
+  <div>
+    {{ content }}
+  </div>
+</section>
