--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
       <div class="column"></div>
     </div>
 
-    <footer class="footer has-background-light">
+    <footer class="footer has-background-white">
       <div class="content has-text-centered is-small">
         <p class="has-text-grey has-text-weight-bold">
           Copyright &copy; 2019 David Edwards
