change site to https

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <nav class="navbar is-fixed-top is-light" role="navigation" aria-label="main navigation">
         <div class="container has-text-weight-bold">
           <div class="navbar-brand">
-            <a class="navbar-item" href="http://davidedwards.io">
+            <a class="navbar-item" href="https://davidedwards.io">
               <img src="/images/de-icon.png">
             </a>
             <p class="navbar-item has-text-grey is-uppercase">
