support dark mode

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,7 @@
     <meta name="author" content="David Edwards"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
     <link rel="stylesheet" type="text/css" href="/css/syntax.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
     <link rel="icon" type="image/png" href="/images/de-icon.png"/>
@@ -14,7 +13,7 @@
     <script src="/scripts/navbar.js"></script>
   </head>
   <body class="has-navbar-fixed-top">
-    <nav class="navbar is-fixed-top is-light" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-fixed-top has-background-grey-lighter" role="navigation" aria-label="main navigation">
         <div class="container has-text-weight-bold">
           <div class="navbar-brand">
             <a class="navbar-item" href="https://davidedwards.io">
@@ -65,7 +64,7 @@
       <div class="column"></div>
     </div>
 
-    <footer class="footer has-background-white">
+    <footer class="footer has-background-white-ter">
       <div class="content has-text-centered is-small">
         <p class="has-text-grey has-text-weight-bold">
           Copyright &copy; 2019 David Edwards
