add LinkedIn badge on about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="/images/de-icon.png"/>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="/scripts/navbar.js"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   </head>
   <body class="has-navbar-fixed-top">
     <nav class="navbar is-fixed-top has-background-grey-lighter" role="navigation" aria-label="main navigation">
