--- a/sass/base.sass
+++ b/sass/base.sass
@@ -1,1 +1,1 @@
-$family-sans-serif: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$family-sans-serif: "Rubik", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
