upgrade Google Analytics library

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" type="text/css" href="/css/syntax.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik"/>
     <link rel="icon" type="image/png" href="/images/de-icon.png"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80543800-1"></script>
+    <script src="/scripts/gtag.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="/scripts/navbar.js"></script>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <script async defer src="https://platform.linkedin.com/badges/js/profile.js"></script>
   </head>
   <body class="has-navbar-fixed-top">
     <nav class="navbar is-fixed-top has-background-grey-lighter" role="navigation" aria-label="main navigation">
@@ -72,6 +74,5 @@
         </p>
       </div>
     </footer>
-    <script src="/scripts/analytics.js"></script>
   </body>
 </html>
