--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 title: Blog
 ---
 <section class="section">
-  <h2 class="title is-4">{{ page.topic }}</h1>
-  <h3 class="subtitle is-6 has-text-grey">{{ page.date | date_to_string }}</h3>
-  <div>
-    {{ content }}
-  </div>
+    <h2 class="title">{{ page.topic }}</h1>
+    <h3 class="subtitle has-text-grey">{{ page.date | date_to_string }}</h3>
+    <div>
+        {{ content }}
+    </div>
 </section>
