--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,16 +7,13 @@
         <title>{{ page.title }}</title>
         <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
         <link rel="stylesheet" type="text/css" href="/css/syntax.css"/>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik"/>
         <link rel="icon" type="image/png" href="/images/de-icon.png"/>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80543800-1"></script>
         <script src="/scripts/gtag.js"></script>
-        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
         <script src="/scripts/navbar.js"></script>
-        <script async defer src="https://platform.linkedin.com/badges/js/profile.js"></script>
     </head>
     <body class="has-navbar-fixed-top">
-        <nav class="navbar is-fixed-top has-background-grey-lighter" role="navigation" aria-label="main navigation">
+        <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
             <div class="container has-text-weight-bold">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="/">
@@ -59,7 +56,7 @@
             </div>
             <div class="column"></div>
         </div>
-        <footer class="footer has-background-white-ter">
+        <footer class="footer">
             <div class="content has-text-centered is-small">
                 <p class="has-text-grey has-text-weight-bold">
                     Copyright &copy; 2024 David Edwards
