add top-level navigation link to medium.com

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,9 @@
                         <a class="navbar-item" href="https://linkedin.com/in/davidledwards">
                             LinkedIn
                         </a>
+                        <a class="navbar-item" href="https://davidledwards.medium.com/">
+                            Medium
+                        </a>
                         <a class="navbar-item" href="https://instagram.com/david.l.edwards">
                             Instagram
                         </a>
