improve layout on mobile devices

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
         </nav>
         <div class="columns is-mobile">
             <div class="column"></div>
-            <div class="column is-two-thirds">
+            <div class="column is-two-thirds is-full-mobile">
                 {{ content }}
             </div>
             <div class="column"></div>
