--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 @use "bulma/sass" with (
-    $family-sans-serif: '"Rubik", "Helvetica Neue", "Helvetica", "Arial", sans-serif'
+    $family-sans-serif: 'Rubik, "Segoe UI", Roboto, Helvetica, Arial, sans-serif'
 );
 
 @import url("https://fonts.googleapis.com/css?family=Rubik")
